crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__bool_op__invalid_rhs_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/bool_op/invalid_rhs_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..31,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..17,
                    value: BoolOp(
                        ExprBoolOp {
                            node_index: NodeIndex(None),
                            range: 0..17,
                            op: And,
                            values: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 0..1,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                Lambda(
                                    ExprLambda {
                                        node_index: NodeIndex(None),
                                        range: 6..17,
                                        parameters: Some(
                                            Parameters {
                                                range: 13..14,
                                                node_index: NodeIndex(None),
                                                posonlyargs: [],
                                                args: [
                                                    ParameterWithDefault {
                                                        range: 13..14,
                                                        node_index: NodeIndex(None),
                                                        parameter: Parameter {
                                                            range: 13..14,
                                                            node_index: NodeIndex(None),
                                                            name: Identifier {
                                                                id: Name("y"),
                                                                range: 13..14,
                                                                node_index: NodeIndex(None),
                                                            },
                                                            annotation: None,
                                                            runtime_type_comment: None,
                                                            runtime_type_comment_bytes: None,
                                                        },
                                                        default: None,
                                                    },
                                                ],
                                                vararg: None,
                                                kwonlyargs: [],
                                                kwarg: None,
                                                runtime_defaults: None,
                                            },
                                        ),
                                        body: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 16..17,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            runtime_values: None,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 19..31,
                    value: BoolOp(
                        ExprBoolOp {
                            node_index: NodeIndex(None),
                            range: 19..31,
                            op: Or,
                            values: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 19..20,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                Yield(
                                    ExprYield {
                                        node_index: NodeIndex(None),
                                        range: 24..31,
                                        value: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 30..31,
                                                    id: Name("y"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                            runtime_values: None,
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | x and lambda y: y
  |       ^^^^^^^^^^^ Syntax Error: Lambda expression cannot be used here
2 |
3 | x or yield y
  |


  |
1 | x and lambda y: y
2 |
3 | x or yield y
  |      ^^^^^^^ Syntax Error: Yield expression cannot be used here
