crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__bool_op__starred_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/bool_op/starred_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..16,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..8,
                    value: BoolOp(
                        ExprBoolOp {
                            node_index: NodeIndex(None),
                            range: 0..8,
                            op: And,
                            values: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 0..1,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 6..8,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 7..8,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            runtime_values: None,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 9..16,
                    value: BoolOp(
                        ExprBoolOp {
                            node_index: NodeIndex(None),
                            range: 9..16,
                            op: Or,
                            values: [
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 9..10,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                Starred(
                                    ExprStarred {
                                        node_index: NodeIndex(None),
                                        range: 14..16,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 15..16,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            runtime_values: None,
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | x and *y
  |       ^^ Syntax Error: invalid syntax
2 | x or *y
  |


  |
1 | x and *y
2 | x or *y
  |      ^^ Syntax Error: invalid syntax
